; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/p54/extr_txrx.c_p54_tx_qos_accounting_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/p54/extr_txrx.c_p54_tx_qos_accounting_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.p54_common = type { i64, i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.sk_buff = type { i32 }

@P54_QUEUE_BEACON = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.p54_common*, %struct.sk_buff*)* @p54_tx_qos_accounting_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @p54_tx_qos_accounting_free(%struct.p54_common* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca %struct.p54_common*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca i64, align 8
  store %struct.p54_common* %0, %struct.p54_common** %3, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %4, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %7 = call i64 @IS_DATA_FRAME(%struct.sk_buff* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %49

9:                                                ; preds = %2
  %10 = load %struct.p54_common*, %struct.p54_common** %3, align 8
  %11 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %10, i32 0, i32 2
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @spin_lock_irqsave(i32* %11, i64 %12)
  %14 = load %struct.p54_common*, %struct.p54_common** %3, align 8
  %15 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %14, i32 0, i32 3
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %18 = call i64 @GET_HW_QUEUE(%struct.sk_buff* %17)
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %20, align 4
  %23 = load %struct.p54_common*, %struct.p54_common** %3, align 8
  %24 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %23, i32 0, i32 2
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @spin_unlock_irqrestore(i32* %24, i64 %25)
  %27 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %28 = call i64 @GET_HW_QUEUE(%struct.sk_buff* %27)
  %29 = load i64, i64* @P54_QUEUE_BEACON, align 8
  %30 = icmp eq i64 %28, %29
  %31 = zext i1 %30 to i32
  %32 = call i64 @unlikely(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %48

34:                                               ; preds = %9
  %35 = load %struct.p54_common*, %struct.p54_common** %3, align 8
  %36 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %39 = call i64 @GET_REQ_ID(%struct.sk_buff* %38)
  %40 = icmp eq i64 %37, %39
  br i1 %40, label %41, label %44

41:                                               ; preds = %34
  %42 = load %struct.p54_common*, %struct.p54_common** %3, align 8
  %43 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %42, i32 0, i32 0
  store i64 0, i64* %43, align 8
  br label %44

44:                                               ; preds = %41, %34
  %45 = load %struct.p54_common*, %struct.p54_common** %3, align 8
  %46 = getelementptr inbounds %struct.p54_common, %struct.p54_common* %45, i32 0, i32 1
  %47 = call i32 @complete(i32* %46)
  br label %48

48:                                               ; preds = %44, %9
  br label %49

49:                                               ; preds = %48, %2
  %50 = load %struct.p54_common*, %struct.p54_common** %3, align 8
  %51 = call i32 @p54_wake_queues(%struct.p54_common* %50)
  ret void
}

declare dso_local i64 @IS_DATA_FRAME(%struct.sk_buff*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @GET_HW_QUEUE(%struct.sk_buff*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @GET_REQ_ID(%struct.sk_buff*) #1

declare dso_local i32 @complete(i32*) #1

declare dso_local i32 @p54_wake_queues(%struct.p54_common*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
